RESOLVED FIXED260900
Worker/SharedWorker should fire Event instead of ErrorEvent in case of parsing error
https://bugs.webkit.org/show_bug.cgi?id=260900
Summary Worker/SharedWorker should fire Event instead of ErrorEvent in case of parsin...
youenn fablet
Reported 2023-08-30 05:13:37 PDT
Worker/SharedWorker should fire Event instead of ErrorEvent in case of parsing error
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-30 05:13:51 PDT
youenn fablet
Comment 2 2023-08-30 05:20:31 PDT
youenn fablet
Comment 3 2023-08-31 05:19:22 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/41737
EWS
Comment 4 2023-09-01 01:35:33 PDT
Committed 267546@main (276241243511): <https://commits.webkit.org/267546@main> Reviewed commits have been landed. Closing PR #17219 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.