Source/WebCore/workers/WorkerReportingProxy.h
@@ -38,6 +38,8 @@ public:
 
     virtual void postExceptionToWorkerObject(const String& errorMessage, int lineNumber, int columnNumber, const String& sourceURL) = 0;
 
+    virtual void reportErrorToWorkerObject(const String&) = 0;
+
     // Invoked when close() is invoked on the worker context.
     virtual void workerGlobalScopeClosed() = 0;
 
